<?xml version="1.0"?>
<package format="2">
  <name>ros_sam</name>
  <version>0.0.0</version>
  <description>The ros_sam package</description>
  <maintainer email="aroefer@cs.uni-freiburg.de">Adrian Röfer</maintainer>
  <license>GPLv3</license>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>ros_sam_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>ros_sam_msgs</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>ros_sam_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  
  <export>

  </export>
</package>
